# Gomoku_Homework

./: CMakeLists.txt  README.md
.github/workflows/: qodana_code_quality.yml
electron_ui/: index.html  main.js  package.json  renderer.js  style.css
src/: main.cpp
src/resource/: res.qrc
src/widget/: aibrain.cpp  aibrain.h  chessboard.cpp  chessboard.h  chessboard.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  gomoku.cpp  gomoku.h  gomoku.ui  gomokuLogic.cpp  gomokuLogic.h  main_console.cpp  ui_chessboard.h  ui_gamewindow.h  ui_gomoku.h
